<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.applus.georeference.MainActivity"
    android:background="@color/colorBackground">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewApplusLogo"
        android:src="@drawable/logo_applus"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:id="@+id/button_settings"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:textColor="@color/colorButtonText"
        android:layout_below="@+id/buttonExport"
        android:layout_alignLeft="@+id/buttonExport"
        android:layout_alignStart="@+id/buttonExport"
        android:layout_alignRight="@+id/buttonExport"
        android:layout_alignEnd="@+id/buttonExport" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project"
        android:id="@+id/button_new_project"
        android:background="@drawable/shape"
        android:textColor="@color/colorButtonText"
        android:layout_below="@+id/imageViewApplusLogo"
        android:layout_alignLeft="@+id/button_continue_project"
        android:layout_alignStart="@+id/button_continue_project"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/button_continue_project"
        android:layout_alignEnd="@+id/button_continue_project" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_project"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:textColor="@color/colorButtonText"
        android:id="@+id/button_continue_project"
        android:layout_below="@+id/button_new_project"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_data"
        android:id="@+id/buttonExport"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:textColor="@color/colorButtonText"
        android:layout_below="@+id/button_continue_project"
        android:layout_alignRight="@+id/button_continue_project"
        android:layout_alignEnd="@+id/button_continue_project"
        android:layout_alignLeft="@+id/button_continue_project"
        android:layout_alignStart="@+id/button_continue_project" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/no_color"
        app:srcCompat="@drawable/mr_ic_settings_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageButtonObjectSettings" />

</RelativeLayout>
